--- a/frontend/src/pages/precios/index.astro
+++ b/frontend/src/pages/precios/index.astro
@@ -7,6 +7,8 @@ import { getAllServices } from "../../services/servicesService";
 import type { ServicesCategory } from "../../sanity/types/services";
 import Faq from "../../components/nosotros/Faq.astro";
 import { ServicesInteractive } from "../../components/shared/ServiceInteractive";
+import { RedesignModalContent } from "@/components/shared/RedisingModalComponent.tsx";
+import ReadingProgress from "@/components/blog/blogPost/ReadingProgress.astro";
 
 // 3. Obtenemos los datos (Fetching)
 const allServices: ServicesCategory[] = await getAllServices();
