Gente guapa y lolera

--- a/frontend/src/pages/nosotros/index.astro
+++ b/frontend/src/pages/nosotros/index.astro
@@ -10,6 +10,7 @@ import Benefits from "../../components/nosotros/Benefits.astro";
 import TechStackMarquee from "../../components/nosotros/TechStackMarquee.astro";
 import Faq from "../../components/nosotros/Faq.astro";
 import FinalCta from "../../components/nosotros/FinalCta.astro";
+import TeamSection from "@/components/nosotros/TeamSection.astro";
 ---
 
 <BaseLayout
@@ -21,6 +22,7 @@ import FinalCta from "../../components/nosotros/FinalCta.astro";
   <HeroParallax client:load />
   <!-- <Intro /> -->
   <Specialties />
+  <TeamSection />
   <ProcessTimeline />
   <Diagnosis />
   <Values />
